--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "tobi",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -21,20 +21,86 @@
     "format:write": "nx format:write",
     "format:check": "nx format:check",
     "update": "nx migrate latest",
-    "workspace-generator": "nx workspace-generator",
+    "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@ant-design/charts": "^0.9.9",
+    "@antv/g2plot": "^1.1.18",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "antd": "^4.5.1",
+    "chart.js": "^2.9.3",
+    "clsx": "^1.1.1",
+    "document-register-element": "1.13.1",
+    "express": "4.17.1",
+    "google-auth-library": "^6.0.5",
+    "googleapis": "^39.2.0",
+    "history": "^5.0.0",
+    "icons": "^1.0.0",
+    "moment": "^2.27.0",
+    "nx": "^10.1.0",
+    "prop-types": "^15.7.2",
+    "react": "16.13.1",
+    "react-chartjs-2": "^2.10.0",
+    "react-dom": "16.13.1",
+    "react-g2plot": "^0.2.1",
+    "react-native": "0.63.4",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-router-dom": "^5.2.0",
+    "validate.js": "^0.13.1"
+  },
   "devDependencies": {
-    "@nrwl/tao": "11.5.2",
-    "@nrwl/cli": "11.5.2",
-    "@nrwl/workspace": "11.5.2",
-    "@types/node": "14.14.33",
-    "dotenv": "8.2.0",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.0.3",
-    "prettier": "2.2.1"
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-react": "7.9.4",
+    "@babel/preset-typescript": "7.9.0",
+    "@nrwl/cypress": "11.4.0",
+    "@nrwl/eslint-plugin-nx": "11.4.0",
+    "@nrwl/express": "^11.4.0",
+    "@nrwl/jest": "11.4.0",
+    "@nrwl/linter": "10.4.4",
+    "@nrwl/node": "11.4.0",
+    "@nrwl/react": "11.4.0",
+    "@nrwl/react-native": "^11.4.1",
+    "@nrwl/web": "11.4.0",
+    "@nrwl/workspace": "11.4.0",
+    "@react-native-community/cli": "4.14.0",
+    "@react-native-community/cli-platform-android": "4.13.0",
+    "@react-native-community/cli-platform-ios": "4.13.0",
+    "@testing-library/jest-native": "3.4.3",
+    "@testing-library/react": "10.4.1",
+    "@testing-library/react-native": "7.1.0",
+    "@types/express": "4.17.0",
+    "@types/jest": "25.1.4",
+    "@types/node": "14.0.26",
+    "@types/react": "16.9.38",
+    "@types/react-dom": "16.9.8",
+    "@types/react-native": "0.63.18",
+    "@typescript-eslint/eslint-plugin": "2.19.2",
+    "@typescript-eslint/parser": "2.19.2",
+    "babel-jest": "25.1.0",
+    "cypress": "^4.1.0",
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.4",
+    "jest": "25.2.3",
+    "jest-react-native": "18.0.0",
+    "metro": "0.59.0",
+    "metro-react-native-babel-preset": "0.63.0",
+    "metro-resolver": "0.59.0",
+    "prettier": "2.0.4",
+    "react-test-renderer": "17.0.1",
+    "ts-jest": "25.2.1",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.9.3"
   }
 }
